# dependency_ros_failture

src/pkga/: CMakeLists.txt  package.xml
src/pkgb/: CMakeLists.txt  package.xml
