<?xml version="1.0"?>
<package format="2">
  <name>pkgb</name>
  <version>0.0.0</version>
  <description>The pkgb package</description>

  <maintainer email="tkostas@todo.todo">tkostas</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>pkga</exec_depend>
</package>
